package protocol;

// Protocol version
enum ProtocolVersionMajor {
  PROTOCOL_VERSION_MAJOR = 6;
}
enum ProtocolVersionMinor {
  PROTOCOL_VERSION_MINOR = 0;
}

enum ConstantNodeId {
  ROOT = 13;
  TYPES = 15;
  OBJECTS = 100;
  DEVICES = 109;
}

enum AttributeId {
  NODE_ID = 1;
  NODE_CLASS = 2;
  BROWSE_NAME = 3;
  DISPLAY_NAME = 4;
  DESCRIPTION = 5;
  WriteMask = 6;
  UserWriteMask = 7;
  IsAbstract = 8;
  Symmetric = 9;
  InverseName = 10;
  ContainsNoLoops = 11;
  EVENT_NOTIFIER = 12;
  VALUE = 13;
  DATA_TYPE = 14;
  ValueRank = 15;
  ArrayDimensions = 16;
  AccessLevel = 17;
  UserAccessLevel = 18;
  MinimumSamplingInterval = 19;
  Historizing = 20;
  Executable = 21;
  UserExecutable = 22;
}

message Attributes {
  optional bytes browse_name = 3;
  optional bytes display_name = 4;
  optional Variant value = 13;
  optional NodeId data_type_id = 14;
}

enum NodeClass {
  Object = 1;
  Variable = 2;
  Method = 4;
  ObjectType = 8;
  VariableType = 16;
  ReferenceType = 32;
  DataType = 64;
  View = 128;
}

message Status {
  required uint32 code = 1;
}

message Qualifier {
  enum Severity {
    // Good value.
    GOOD = 0;
    // Value is not up-to-date.
    UNCERTAIN = 1;
    // Subscription has failed.
    BAD = 2;
  }

  enum SubCode {
    GOOD_NORMAL = 0;
    GOOD_BACKUP = 1;
    GOOD_MANUAL = 2;
    GOOD_SIMULATED = 3;
    UNCERTAIN_DEVICE = 10;
    UNCERTAIN_OFFLINE = 11;
    UNCERTAIN_MISCONFIGURED = 12;
    UNCERTAIN_STALE = 13;
    BAD_FAILED = 20;
  }

  enum Limit {
    NORMAL = 0;
    LO = 1;
    HI = 2;
    LOLO = 3;
    HIHI = 4;
  }

  required Severity severity = 1;
  optional SubCode sub_code = 2;
  optional Limit limit = 3;
}

message NodeId {
  optional uint32 namespace_index = 1;
  optional uint32 numeric_id = 2;
  optional string string_id = 3;
  optional bytes opaque_id = 4;
}

message Variant {
  optional bool   bool_value    = 1;
  optional int32  int32_value   = 2;
  optional int64  int64_value   = 3;
  optional double double_value  = 4;
  optional bytes  string_value  = 5;
  optional NodeId node_id_value = 6;
  optional bytes  localized_text_value = 7;
  optional bytes  qualified_name_value = 8;
}

message DataValue {
  required uint64 server_timestamp = 1;
  optional uint64 source_timestamp = 2;
  optional Variant value = 3;
  required uint32 qualifier = 4;
  optional uint32 status_code = 5;
}

message Event {
  optional uint32 monitored_item_id = 1;
  optional Status status = 13;
  required uint64 time = 2;
  required uint32 severity = 3;
  optional NodeId source_node_id = 4;
  optional NodeId user_node_id = 5;
  optional Variant value = 6;
  optional uint32 qualifier = 7;
  optional bytes message = 8;
  optional bool acknowledged = 9;
  optional uint64 acknowledge_id = 10;
  optional uint64 acknowledge_time = 11;
  optional NodeId acknowledge_user_id = 12;
}

message CreateSession {
  required bytes user_name = 1;
  optional bytes password = 2;
  optional bool delete_existing = 3;

  // Assume version 0.0 if it isn't specified.
  required uint32 protocol_version_major = 4;
  required uint32 protocol_version_minor = 5;
}

message CreateSessionResult {
  optional string token = 1;
  optional NodeId user_node_id = 2;
  optional uint32 user_rights = 3;

  // Current protocol version of server.
  required uint32 protocol_version_major = 4;
  required uint32 protocol_version_minor = 5;
}

message DeleteSession {
  optional string token = 1;
}

message NodeReference {
  optional NodeId reference_type_id = 1;
  optional bool forward = 2;
  optional NodeId node_id = 3;
}

message NodeProperty {
  optional NodeId declaration_id = 1;
  optional Variant value = 2;
}

message Node {
  required NodeId node_id = 1;
  optional NodeId type_definition_id = 2;
  optional NodeClass node_class = 3;
  optional Attributes attributes = 5;
  optional NodeId parent_id = 6;
  optional NodeId reference_type_id = 7;
  repeated NodeReference reference = 8;
  repeated NodeProperty property = 9;
}

message CreateNode {
  optional NodeId requested_node_id = 1;
  required NodeId type_definition_id = 2;
  required NodeId parent_id = 3;
  required NodeClass node_class = 5;
  optional Attributes attributes = 6;
}

message CreateNodeResult {
  required NodeId node_id = 1;
}

message DeleteNode {
  required NodeId node_id = 2;
  optional bool return_references = 10;
}

message DeleteNodeResult {
  repeated NodeId references = 1;
}

message ModifyNode {
  required NodeId node_id = 1;
  optional Attributes attributes = 2;
}

message Reference {
  required NodeId reference_type_id = 1;
  required NodeId source_id = 2;
  required NodeId target_id = 3;
}

message ChangePassword {
  required NodeId user_node_id = 1;
  required bytes current_password = 2;
  required bytes new_password = 3;
}

message ReadValueId {
  required NodeId node_id = 1;
  required AttributeId attribute_id = 2;
}

message Read {
  repeated ReadValueId value_id = 1;
}

message ReadResult {
  repeated DataValue value = 1;
}

message Write {
  required NodeId node_id = 1;
  required double value = 2;
  optional bool select = 5;
}

// Calls

message DeviceCommand {
  required NodeId node_id = 1;
  required NodeId method_id = 2;
  repeated Variant argument = 3;
}

message Acknowledge {
  required uint64 event_id = 1;
  optional bytes comment = 2;
}

message Call {
  optional DeviceCommand device_command = 1;
  optional Acknowledge acknowledge = 2;
}

message HistoryReadRaw {
  required NodeId node_id = 1;
  required uint64 from = 3;
  optional uint64 to = 4;
}

message HistoryReadRawResult {
  repeated DataValue value = 1;
  optional bytes continuation_point = 2;
}

message EventFilter {
  optional bool acked = 1;
  optional bool unacked = 2;
}

message HistoryReadEvents {
  required NodeId node_id = 1;
  required uint64 from = 3;
  optional uint64 to = 4;
  optional EventFilter filter  = 5;
}

message HistoryReadEventsResult {
  repeated Event event = 1;
}

message CreateSubscription {
  optional uint32 update_rate_ms = 1;
  optional EventFilter event_filter = 2;
}

message CreateSubscriptionResult {
  optional uint32 subscription_id = 1;
}

message DeleteSubscription {
  required uint32 subscription_id = 1;
}

message CreateMonitoredItem {
  required uint32 subscription_id = 1;
  required NodeId node_id = 2;
  required AttributeId attribute_id = 3;
}

message CreateMonitoredItemResult {
  optional uint32 monitored_item_id = 21;
}

message DeleteMonitoredItem {
  required uint32 subscription_id = 1;
  required uint32 monitored_item_id = 2;
}

message NodeTree {
  repeated Node node = 1;
  repeated Reference reference = 2;
}

enum BrowseDirection {
  FORWARD = 0;
  INVERSE = 1;
  BOTH = 2;
}

message BrowseDescription {
  required NodeId node_id = 1;
  optional BrowseDirection direction = 2;
  optional NodeId reference_type_id = 3;
  optional bool include_subtypes = 4;
}

message Browse {
  repeated BrowseDescription nodes = 1;
}

message ReferenceDescription {
  required NodeId reference_type_id = 1;
  required bool forward = 2;
  required NodeId node_id = 3;
}

message BrowseResult {
  optional uint32 status_code = 1;
  repeated ReferenceDescription references = 2;
}

message BrowseResponse {
  repeated BrowseResult results = 2;
}

message Ping {
}

message Request {
  optional uint32 request_id = 1;

  optional CreateSession create_session = 10;
  optional DeleteSession delete_session = 11;
  optional Ping ping = 15;

  optional Read read = 14;
  optional Write write = 12;
  optional Call call = 13;

  optional CreateSubscription create_subscription = 20;
  optional DeleteSubscription delete_subscription = 21;

  optional CreateMonitoredItem create_monitored_item = 30;
  optional DeleteMonitoredItem delete_monitored_item = 31;

  optional HistoryReadRaw history_read_raw = 40;
  optional HistoryReadEvents history_read_events = 41;

  optional CreateNode create_node = 50;
  optional DeleteNode delete_node = 51;
  repeated ModifyNode modify_node = 52;

  optional Reference add_reference = 54;
  optional Reference delete_reference = 55;

  optional ChangePassword change_password = 53;

  optional Browse browse = 60;
}

message Response {
  required uint32 request_id = 1;
  required Status status = 2;

  optional CreateSessionResult create_session_result = 10;

  optional ReadResult read_result = 14;

  optional CreateSubscriptionResult create_subscription_result = 20;

  optional CreateMonitoredItemResult create_monitored_item_result = 30;

  optional HistoryReadRawResult history_read_raw_result = 40;
  optional HistoryReadEventsResult history_read_events_result = 41;

  optional CreateNodeResult create_node_result = 50;
  optional DeleteNodeResult delete_node_result = 51;
  repeated Status modify_node_result = 52;

  optional BrowseResponse browse = 60;
}

message DataChange {
  required uint32 monitored_item_id = 1;
  required DataValue data_value = 2;
}

message SessionDeleted {
}

message ModelChangeEvent {
  optional NodeId node_id = 1;
  optional NodeId type_definition_id = 2;
  optional bool node_added = 3;
  optional bool node_deleted = 4;
  optional bool reference_added = 5;
  optional bool reference_deleted = 6;
}

message Notification {
  optional uint32 subscription_id = 1;

  repeated DataChange data_changes = 2;

  repeated ModelChangeEvent model_change = 3;
  repeated NodeId semantics_changed_node_id = 5;

  repeated Event events = 8;
  optional SessionDeleted session_deleted = 9;
}

message Message {
  repeated Notification notifications = 1;
  repeated Request requests = 2;
  repeated Response responses = 3;
}
